force-app/main/default/objects/Case/fields/Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Score__c</fullName>
    <description>Score from most recent behavioral health assessment</description>
    <label>Assessment Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>