force-app/main/default/objects/Case/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <description>Type of behavioral health assessment used</description>
    <label>Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PHQ-9 (Depression)</fullName>
            </value>
            <value>
                <fullName>GAD-7 (Anxiety)</fullName>
            </value>
            <value>
                <fullName>Columbia Suicide Severity</fullName>
            </value>
            <value>
                <fullName>AUDIT (Alcohol)</fullName>
            </value>
            <value>
                <fullName>DAST (Drug)</fullName>
            </value>
            <value>
                <fullName>PCL-5 (PTSD)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>