force-app/main/default/objects/Case/fields/Authorization_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorization_End_Date__c</fullName>
    <description>When current authorization expires</description>
    <label>Authorization End Date</label>
    <type>Date</type>
</CustomField>