force-app/main/default/objects/Case/fields/Authorization_Hours_Approved__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Hours_Approved__c</fullName>
    <description>Total hours authorized for this case</description>
    <label>Authorization Hours Approved</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>