force-app/main/default/objects/Case/fields/Authorization_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Hours_Remaining__c</fullName>
    <description>Approved hours minus used hours</description>
    <formula>Authorization_Hours_Approved__c - Authorization_Hours_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorization Hours Remaining</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>