force-app/main/default/objects/Case/fields/Authorization_Hours_Used__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Hours_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total hours used (updated by scheduled services)</description>
    <label>Authorization Hours Used</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>