force-app/main/default/objects/Case/fields/Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Number__c</fullName>
    <description>MCO authorization reference number (copied from Referral)</description>
    <label>Authorization Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>