force-app/main/default/objects/Case/fields/Barriers_To_Progress__c.field-meta.xml
<CustomField>
    <fullName>Barriers_To_Progress__c</fullName>
    <description>Identified barriers to participant&apos;s recovery progress</description>
    <label>Barriers to Progress</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>