force-app/main/default/objects/Case/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Current status of the case management</description>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Pending Discharge</fullName>
            </value>
            <value>
                <fullName>Discharged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>