force-app/main/default/objects/Case/fields/Contact_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preferences__c</fullName>
    <description>Participant preferred contact method and times</description>
    <label>Contact Preferences</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>