force-app/main/default/objects/Case/fields/Coping_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Coping_Strategies__c</fullName>
    <description>Participant-identified coping strategies and skills</description>
    <label>Coping Strategies</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>