force-app/main/default/objects/Case/fields/Credible_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Credible_Profile_ID__c</fullName>
    <description>Link to Credible EHR profile (copied from Referral)</description>
    <label>Credible Profile ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>