force-app/main/default/objects/Case/fields/Current_Goals__c.field-meta.xml
<CustomField>
    <fullName>Current_Goals__c</fullName>
    <description>Current IRP goals being worked on with this participant</description>
    <label>Current Goals</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>