force-app/main/default/objects/Case/fields/Discharge_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Reason__c</fullName>
    <description>Reason participant was discharged from services</description>
    <label>Discharge Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Goals Met</fullName>
            </value>
            <value>
                <fullName>Participant Request</fullName>
            </value>
            <value>
                <fullName>Authorization Exhausted</fullName>
            </value>
            <value>
                <fullName>Lost Contact</fullName>
            </value>
            <value>
                <fullName>Moved Out of Area</fullName>
            </value>
            <value>
                <fullName>Higher Level of Care</fullName>
            </value>
            <value>
                <fullName>Hospitalization</fullName>
            </value>
            <value>
                <fullName>Incarceration</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Non-Compliance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>