force-app/main/default/objects/Case/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <description>Name of participant&apos;s emergency contact</description>
    <label>Emergency Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>