force-app/main/default/objects/Case/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <description>Phone number for participant&apos;s emergency contact</description>
    <label>Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>