force-app/main/default/objects/Case/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <description>Relationship of emergency contact to participant</description>
    <label>Emergency Contact Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Spouse/Partner</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Case Manager</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>