force-app/main/default/objects/Case/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <description>Social Determinant of Health - Current employment situation</description>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employed Full-Time</fullName>
            </value>
            <value>
                <fullName>Employed Part-Time</fullName>
            </value>
            <value>
                <fullName>Self-Employed</fullName>
            </value>
            <value>
                <fullName>Unemployed - Seeking Work</fullName>
            </value>
            <value>
                <fullName>Unemployed - Not Seeking</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>