force-app/main/default/objects/Case/fields/Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Level__c</fullName>
    <description>Current level of participant engagement with services</description>
    <label>Engagement Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Highly Engaged</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
                <default>true</default>
                <label>Engaged</label>
            </value>
            <value>
                <fullName>Moderately Engaged</fullName>
            </value>
            <value>
                <fullName>Minimally Engaged</fullName>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
            <value>
                <fullName>Re-engaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>