force-app/main/default/objects/Case/fields/Follow_Up_IRP_Completed__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_IRP_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>180-day IRP has been completed</description>
    <label>Follow Up IRP Completed</label>
    <type>Checkbox</type>
</CustomField>