force-app/main/default/objects/Case/fields/Follow_Up_IRP_Due__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_IRP_Due__c</fullName>
    <description>Service Start Date + 180 days</description>
    <formula>Service_Start_Date__c + 180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow Up IRP Due</label>
    <type>Date</type>
</CustomField>