force-app/main/default/objects/Case/fields/Food_Security__c.field-meta.xml
<CustomField>
    <fullName>Food_Security__c</fullName>
    <description>Social Determinant of Health - Access to adequate food</description>
    <label>Food Security</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Food Secure</fullName>
            </value>
            <value>
                <fullName>Low Food Security</fullName>
            </value>
            <value>
                <fullName>Very Low Food Security</fullName>
            </value>
            <value>
                <fullName>Uses Food Assistance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>