force-app/main/default/objects/Case/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <description>Social Determinant of Health - Current housing situation</description>
    <label>Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stable Housing</fullName>
            </value>
            <value>
                <fullName>Unstable Housing</fullName>
            </value>
            <value>
                <fullName>Transitional Housing</fullName>
            </value>
            <value>
                <fullName>Homeless - Sheltered</fullName>
            </value>
            <value>
                <fullName>Homeless - Unsheltered</fullName>
            </value>
            <value>
                <fullName>Group Home</fullName>
            </value>
            <value>
                <fullName>Living with Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>