force-app/main/default/objects/Case/fields/Insurance_Payer__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Payer__c</fullName>
    <description>MCO or insurance payer for this participant</description>
    <label>Insurance Payer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPMC Community HealthChoices</fullName>
            </value>
            <value>
                <fullName>AmeriHealth Caritas</fullName>
            </value>
            <value>
                <fullName>PA Health and Wellness</fullName>
            </value>
            <value>
                <fullName>Keystone First CHC</fullName>
            </value>
            <value>
                <fullName>Fee for Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>