force-app/main/default/objects/Case/fields/Last_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assessment_Date__c</fullName>
    <description>Date of most recent behavioral health assessment</description>
    <label>Last Assessment Date</label>
    <type>Date</type>
</CustomField>