force-app/main/default/objects/Case/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>Date of last contact with participant (visit, call, text)</description>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>