force-app/main/default/objects/Case/fields/Last_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Type__c</fullName>
    <description>Type of last contact with participant</description>
    <label>Last Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Person Visit</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Group Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>