force-app/main/default/objects/Case/fields/Last_Crisis_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Crisis_Date__c</fullName>
    <description>Date of participant&apos;s most recent crisis episode</description>
    <label>Last Crisis Date</label>
    <type>Date</type>
</CustomField>