force-app/main/default/objects/Case/fields/MA_ID__c.field-meta.xml
<CustomField>
    <fullName>MA_ID__c</fullName>
    <description>Medical Assistance ID for the participant (copied from Referral)</description>
    <label>MA ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>