force-app/main/default/objects/Case/fields/Next_Assessment_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Assessment_Due__c</fullName>
    <description>Date next behavioral health assessment is due</description>
    <label>Next Assessment Due</label>
    <type>Date</type>
</CustomField>