force-app/main/default/objects/Case/fields/No_Show_Count__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of missed appointments</description>
    <label>No Show Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>