force-app/main/default/objects/Case/fields/Other_Providers__c.field-meta.xml
<CustomField>
    <fullName>Other_Providers__c</fullName>
    <description>List of other external healthcare providers involved in participant&apos;s care</description>
    <label>Other Providers</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>