force-app/main/default/objects/Case/fields/Participant_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Participant_Alerts__c</fullName>
    <description>Important alerts about this participant that Peer Specialists should know before visits (e.g., safety concerns, medication changes, recent crisis)</description>
    <label>Participant Alerts</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>