force-app/main/default/objects/Case/fields/Peer_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Peer_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned CPS/CRS for weekly meetings</description>
    <label>Peer Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases (Peer Specialist)</relationshipLabel>
    <relationshipName>Cases_Peer_Specialist</relationshipName>
    <type>Lookup</type>
</CustomField>