force-app/main/default/objects/Case/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <description>Participant&apos;s preferred method of contact</description>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone Call</fullName>
                <default>true</default>
                <label>Phone Call</label>
            </value>
            <value>
                <fullName>Text Message</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In-Person Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>