force-app/main/default/objects/Case/fields/Preferred_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Time__c</fullName>
    <description>Participant&apos;s preferred time of day for contact</description>
    <label>Preferred Contact Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning (8am-12pm)</fullName>
            </value>
            <value>
                <fullName>Afternoon (12pm-5pm)</fullName>
            </value>
            <value>
                <fullName>Evening (5pm-8pm)</fullName>
            </value>
            <value>
                <fullName>Any Time</fullName>
                <default>true</default>
                <label>Any Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>