force-app/main/default/objects/Case/fields/Primary_Care_Provider__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care_Provider__c</fullName>
    <description>Participant&apos;s primary care physician or provider</description>
    <label>Primary Care Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>