force-app/main/default/objects/Case/fields/Primary_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis__c</fullName>
    <description>Primary behavioral health diagnosis or presenting concern</description>
    <label>Primary Diagnosis</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Bipolar Disorder</fullName>
            </value>
            <value>
                <fullName>Schizophrenia</fullName>
            </value>
            <value>
                <fullName>PTSD</fullName>
            </value>
            <value>
                <fullName>Substance Use Disorder</fullName>
            </value>
            <value>
                <fullName>Co-Occurring Disorders</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>