force-app/main/default/objects/Case/fields/Primary_Therapist__c.field-meta.xml
<CustomField>
    <fullName>Primary_Therapist__c</fullName>
    <description>Name of participant&apos;s primary therapist (external provider)</description>
    <label>Primary Therapist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>