force-app/main/default/objects/Case/fields/Psychiatrist__c.field-meta.xml
<CustomField>
    <fullName>Psychiatrist__c</fullName>
    <description>Name of participant&apos;s psychiatrist (external provider)</description>
    <label>Psychiatrist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>