force-app/main/default/objects/Case/fields/Recovery_Goals__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Goals__c</fullName>
    <description>Participant&apos;s current recovery goals from their IRP</description>
    <label>Recovery Goals</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>