force-app/main/default/objects/Case/fields/Required_Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>Required_Skill_Set__c</fullName>
    <description>Skills required for serving this peer - used to match with qualified staff</description>
    <label>Required Skill Set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spanish Speaking</fullName>
            </value>
            <value>
                <fullName>ASL</fullName>
                <label>ASL (American Sign Language)</label>
            </value>
            <value>
                <fullName>Substance Use Disorder</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Co-Occurring Disorders</fullName>
            </value>
            <value>
                <fullName>Trauma Informed Care</fullName>
            </value>
            <value>
                <fullName>Veterans Services</fullName>
            </value>
            <value>
                <fullName>Youth Services</fullName>
            </value>
            <value>
                <fullName>Forensic</fullName>
                <label>Forensic/Justice Involved</label>
            </value>
            <value>
                <fullName>Housing Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>