force-app/main/default/objects/Case/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <description>Current risk/acuity level for participant safety monitoring</description>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Crisis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>