force-app/main/default/objects/Case/fields/Safety_Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Safety_Plan_Date__c</fullName>
    <description>Date safety plan was last created or updated</description>
    <label>Safety Plan Date</label>
    <type>Date</type>
</CustomField>