force-app/main/default/objects/Case/fields/Safety_Plan_On_File__c.field-meta.xml
<CustomField>
    <fullName>Safety_Plan_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if participant has a documented safety plan</description>
    <label>Safety Plan On File</label>
    <type>Checkbox</type>
</CustomField>