force-app/main/default/objects/Case/fields/Scheduling_Status__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Status__c</fullName>
    <description>Current scheduling status for this case</description>
    <label>Scheduling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>