force-app/main/default/objects/Case/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <description>When service began (used for 180-day calculation)</description>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>