force-app/main/default/objects/Case/fields/Source_Referral__c.field-meta.xml
<CustomField>
    <fullName>Source_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links back to originating Referral (Opportunity)</description>
    <label>Source Referral</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>