force-app/main/default/objects/Case/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <description>Participant-identified personal strengths and resources</description>
    <label>Strengths</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>