force-app/main/default/objects/Case/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supervising RSM</description>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cases (Supervisor)</relationshipLabel>
    <relationshipName>Cases_Supervisor</relationshipName>
    <type>Lookup</type>
</CustomField>