force-app/main/default/objects/Case/fields/Transportation_Access__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Access__c</fullName>
    <description>Social Determinant of Health - Transportation availability</description>
    <label>Transportation Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Has Personal Vehicle</fullName>
            </value>
            <value>
                <fullName>Public Transit</fullName>
            </value>
            <value>
                <fullName>Relies on Others</fullName>
            </value>
            <value>
                <fullName>Medical Transport</fullName>
            </value>
            <value>
                <fullName>No Reliable Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>