force-app/main/default/objects/Case/fields/Treatment_Phase__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Phase__c</fullName>
    <description>Current phase of treatment/recovery journey</description>
    <label>Treatment Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engagement</fullName>
                <default>true</default>
                <label>Engagement</label>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Active Treatment</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Discharge Planning</fullName>
            </value>
            <value>
                <fullName>Aftercare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>