force-app/main/default/objects/Case/fields/Warning_Signs__c.field-meta.xml
<CustomField>
    <fullName>Warning_Signs__c</fullName>
    <description>Participant-identified warning signs that indicate worsening mental health</description>
    <label>Warning Signs</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>